# cfc-mlx

./: .gitignore  README.md  pyproject.toml
cfc_mlx/: __init__.py  cfc.py  wiring.py
examples/: time_series.py
tests/: test_cfc.py
